# AtomicHabits

./: README.md  pyproject.toml
app_habits/: models.py  services.py  task.py  tasks.py  urls.py
app_habits/management/commands/: send_message.py
app_habits/serializers/: habit.py
app_habits/tests/: conftest.py  test_user.py
app_habits/validators/: habit.py
app_habits/views/: habit.py
app_users/: models.py  urls.py
app_users/management/commands/: ccsu.py  ccusers.py
app_users/migrations/: 0001_initial.py
app_users/serializers/: user.py
app_users/views/: user.py
config/: __init__.py  settings.py  urls.py
fixtures/: db.json
tests/: conftest.py  test_good_habit.py  test_habit.py  test_nice_habit.py  test_periodic_task.py  test_user.py
validators/: general_validators.py
